Added a section about the LocationWebSocket class

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -238,6 +238,14 @@
    author={{MongoDB, Inc.}},
    title={{Geospatial Queries}},
    year={2023},
-   url={https://www.mongodb.com/docs/manual/geospatial-queries/#geospatial-models}
+   url={https://www.mongodb.com/docs/manual/geospatial-queries/#geospatial-models},
    urldate={2023-02-21}
+}
+
+@misc{okhttp,
+   author={{Block, Inc}},
+   title={OkHttp WebSocket},
+   year={2022},
+   url={https://square.github.io/okhttp/4.x/okhttp/okhttp3/-web-socket/#websocket},
+   urldate={23 February 2023}
 }
