Added extra bits

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -695,7 +695,7 @@ to improve the game based on the user's feedback. This section goes over the fou
 iteration of development. 
 
 \subsection{Catching Mechanic}
-Based on the design discussed in section \ref{phase2catching}.
+For this I implemented the phase 2 design that I had discussed in section \ref{phase2catching}
 
 \subsection{Shadow Threshold}
 
