Started on a future work section

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -900,8 +900,20 @@ GNSS sensors have to be quick and aim to get as close to the player as possible 
 as possible from a chaser with a phone with a larger catch radius. 
 
 %==================================================================================================================================
-\chapter{Conclusion}    
-Summarise the whole project for a lazy reader who didn't read the rest (e.g. a prize-awarding committee).
+\chapter{Conclusion}
+\section{Summary}
+
+\section{Future Work}
+Due to the limited time that I had to complete the project, there were still some things that I would want to do
+to ensure that the game was a better experience. Over the next few paragraphs I will go over some of the ideas
+that I have to improve the game in the future.
+
+Throughout my development, I mainly considered the core mechanics of the game rather than how the players would win.
+Initially I had put in my design that the winning condition was that the person who was a runner for the longest time
+would win. I however, hadn't managed to get my implementation to work fully. While I have the logging capabilities to
+decide who won, I have no way of telling the winner if they won or not. If I were to have further time, I would have a
+further look into what conditions a player would need to win and also how they would get feedback for how they would win.
+
 \section{Guidance}
 \begin{itemize}
     \item
@@ -916,6 +928,7 @@ Summarise the whole project for a lazy reader who didn't read the rest (e.g. a p
         Indicate what future work could be done, but remember: \textbf{you
         won't get credit for things you haven't done}.
 \end{itemize}
+
 
 %==================================================================================================================================
 %
