Added a paragraph about GPS in smartphones

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -249,3 +249,20 @@
    url={https://square.github.io/okhttp/4.x/okhttp/okhttp3/-web-socket/#websocket},
    urldate={23 February 2023}
 }
+
+@misc{samsungs21specs,
+   author={{Samsung}},
+   title={{Samsung Galaxy S21 FE Specs}},
+   year={2022},
+   url={https://www.samsung.com/uk/smartphones/galaxy-s21-ultra-5g/specs/},
+   urldate={2023-03-02}
+}
+
+@inproceedings{kos2010,
+  author={Tomislav Kos and Ivan Markezic and Josip Pokrajcic},
+  booktitle={Proceedings ELMAR-2010}, 
+  title={Effects of multipath reception on GPS positioning performance}, 
+  year={2010},
+  pages={399-402},
+  issn={1334-2630}
+}
