--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -174,6 +174,16 @@ satellites to find the intersection points. We usually need 3 to 4 satellites to
 
 %TODO - Add a source and paragraph about how GPS is calculated
 
+\subsection{GPS in smartphones}
+These days most smartphones are fitted with a GPS sensor to allow for precise navigation. However GPS is not the only GNSS
+system that smartphones use. Multiple countries have launched their own satellite systems. For example Russia has the GLONASS
+system, the European Union has the GALILEO system, China has the Beidou system. Most modern smartphones make use
+of some or all of these systems. For example my personal phone and the phone that I am testing this project on, the Samsung 
+Galaxy S21 FE makes use of all of the above mentioned GNSS systems \citep{samsungs21specs}. This means that in reality
+a phone will be in sight of roughly 15 to 16 satellites in reality rather than the usual 4. This means that phones can
+have a lot more accuracy than in the past as the increase in satellites means that there is less chance of there being big
+errors.
+
 \section{What causes Inaccuracies in GPS Systems}
 In this project we will be looking at making a game based on GPS shadows which are areas where the GPS signal is not as accurate. In this section I will look
 at the various factors that could effect our accuracy.
@@ -196,6 +206,24 @@ building walls, soil and water. \citep{Kleusberg1990}. Eventually the GNSS recei
 than the original signal which leads to an inaccurate signal. A good signal is received when the receiver has a good signal from at least 4
 satellites. Therefore in urban areas with high rise buildings, one or more satellites could be obstructed. If a game was to be made
 using this concept then the game would be best played in dense urban areas.
+
+\subsection{Multipath Error}
+Another factor which may affect the accuracy of a GPS error signal is a type of error called Multipath. This kind of error is particularily
+common in urban areas. When a satellite signal goes towards a building, the signal will bounce of it and go into a different route to the
+sensor rather than going in a direct route. As a result, the GPS coordinates may be considered to be further away than initially thought.
+This is because the signal will take longer to find the sensor which means that the sensor will think that the true location is further than
+initially thought.
+
+Some ways to mitigate a multipath error is to go into a more open area or to have a different and improved design
+of antenna \citep{Kos2010}. This means that if I were to make a multiplayer game, I may find that some phones are
+more prone to having multipath problems than others. Another way to mitigate a multipath error is to use the 
+satellite noise ratio to see how weak the signal is. When a GNSS sensor receives a signal, it is able to calculate 
+the noise ratio to see how strong the singal is. You can then go over each satellite in turn in order to see how
+good or bad the signal is. When the ratio is closer to 0 then you can say that it is likely that a satellite is blocked
+while a ratio 1 would suggest that the satellite has a direct line of sight of the sensor \citep{uberGPS}. If I were
+to make a game based on multipath I could give the user a label showing them the noise ratio and then see how the ratio
+increases or decreases over time.
+
 
 \section{Seamful Design}
 
