Added a bit on seamless and seamful design

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -266,3 +266,22 @@
   pages={399-402},
   issn={1334-2630}
 }
+
+@inproceedings{chalmers2003seamful,
+  title={Seamful and seamless design in ubiquitous computing},
+  author={Chalmers, Matthew and MacColl, Ian},
+  booktitle={Workshop at the crossroads: The interaction of HCI and systems issues in UbiComp},
+  volume={8},
+  year={2003}
+}
+
+@incollection{canyouseeme,
+author = {Benford, Stephanie and Anastasi, Rob and Flintham, Martin and Greenhalgh, Chris and Crabtree, Andy and Tandavanitj, Nick and Adams, Matt and Row-Farr, Ju},
+year = {2003},
+month = {08},
+pages = {34- 41},
+title = {Coping with uncertainty in a location-based game},
+volume = {2},
+journal = {Pervasive Computing, IEEE},
+doi = {10.1109/MPRV.2003.1228525}
+}
