--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -225,7 +225,20 @@ to make a game based on multipath I could give the user a label showing them the
 increases or decreases over time.
 
 
-\section{Seamful Design}
+\section{Seamless and Seamful Design}
+With most systems there will be potential seams which can cause unintended results to the user. One way to solve this would be to think seamlessly which is where you
+try and fix every flaw so that your system is more robust. In the context of GPS, it is usually important to think seamlessly
+so that people are able to easily to get to your destination. For example \cite{uberGPS} designed a system to improve their
+GPS coordinates using 3D mapping and SNR noise ratio to ensure that Uber drivers were more likely to reach their customers. In
+the example of a game, seamless design is useful when there are significant balance issues. For example making sure to fix
+glitches in order to prevent cheating. 
+
+While trying to close every seam may be appropriate in some areas, it can sometimes be futile to try and close every seam.
+Seamful design is the idea of embracing the seams in the system. In the context of GPS this usually means to try and embrace
+the idea that GPS accuracy can vary based on the type of phone, the area you are in or the GPS clock error. For example 
+\emph{Can you see me now?} a game made by Blast Theory noted that while they were getting significant error radiuses they
+were also finding that eventually the players were able to exploit the drops in GPS accuracy in order to catch other players \citep{canyouseeme}. 
+
 
 
 \section{Guidance}
