--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -282,6 +282,6 @@ month = {08},
 pages = {34- 41},
 title = {Coping with uncertainty in a location-based game},
 volume = {2},
-journal = {Pervasive Computing, IEEE},
+booktitle = {Pervasive Computing, IEEE},
 doi = {10.1109/MPRV.2003.1228525}
 }
