Added a segment on Treasure

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -285,3 +285,22 @@ volume = {2},
 booktitle = {Pervasive Computing, IEEE},
 doi = {10.1109/MPRV.2003.1228525}
 }
+
+@inproceedings{Chalmers2003,
+  author={Chalmers, M. and MacColl, I. and Bell, M.},
+  booktitle={2003 IEE Eurowearable}, 
+  title={Seamful design: showing the seams in wearable computing}, 
+  year={2003},
+  pages={11-16},
+  doi={10.1049/ic:20030140},
+}
+
+@incollection{Barkhuus2005,
+   author = {Louise Barkhuus and Matthew Chalmers and Paul Tennent and Malcolm Hall and Marek Bell and Scott Sherwood and Barry Brown},
+   doi = {10.1007/11551201_21},
+   booktitle = {Lecture Notes in Computer Science},
+   pages = {358-374},
+   publisher = {University of Glasgow},
+   title = {Picking Pockets on the Lawn: The Development of Tactics and Strategies in a Mobile Game},
+   year = {2005},
+}
