Made Treasure italicised

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -243,7 +243,7 @@ were also finding that eventually the players were able to exploit the drops in 
 \section{Previous Games}
 
 \subsection{Treasure}
-Treasure was a location based game created by \cite{Barkhuus2005}. This was another GPS game which involved
+\emph{Treasure} was a location based game created by \cite{Barkhuus2005}. This was another GPS game which involved
 collecting coins in a specific in a more open game area to ensure high GPS accuracy. The objective of the
 game was to collect as many coins as possible, while also being able to "pickpocket" other players to steal their
 coins. The pickpocketing worked by having a button that they pressed as they got close to another person. \cite{Barkhuus2005}
