Added an extra paragraph about Treasure

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -251,6 +251,10 @@ found that one of the big tactics that people would have is that they would take
 in order to pickpocket people from further away or to be able to get away from their victim quickly so they couldn't be
 pickpocketed themselves.
 
+\emph{Treasure} shows that lag and latency might not always be considered a bad thing if it is implemented correctly. As a
+gameplay it could allow for more interesting and close escapes and it can cause other players to come up with new and creative
+strategies.
+
 
 \section{Guidance}
 \begin{itemize}    
