Wrote a bit about previous work

--- a/dissertation/l4proj.bib
+++ b/dissertation/l4proj.bib
@@ -276,14 +276,14 @@
 }
 
 @incollection{canyouseeme,
-author = {Benford, Stephanie and Anastasi, Rob and Flintham, Martin and Greenhalgh, Chris and Crabtree, Andy and Tandavanitj, Nick and Adams, Matt and Row-Farr, Ju},
-year = {2003},
-month = {08},
-pages = {34- 41},
-title = {Coping with uncertainty in a location-based game},
-volume = {2},
-booktitle = {Pervasive Computing, IEEE},
-doi = {10.1109/MPRV.2003.1228525}
+  author={Benford, S. and Anastasi, R. and Flintham, M. and Greenhalgh, C. and Tandavanitj, N. and Adams, M. and Row-Farr, J.},
+  booktitle={IEEE Pervasive Computing}, 
+  title={Coping with uncertainty in a location-based game}, 
+  year={2003},
+  volume={2},
+  number={3},
+  pages={34-41},
+  doi={10.1109/MPRV.2003.1228525}
 }
 
 @inproceedings{Chalmers2003,
