--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -240,10 +240,19 @@ the idea that GPS accuracy can vary based on the type of phone, the area you are
 \emph{Can you see me now?} a Mixed Reality game made by Blast Theory noted that while they were getting significant error radiuses they
 were also finding that eventually the players were able to exploit the drops in GPS accuracy in order to catch other players. \citep{canyouseeme}
 
-\section{Previous Games}
+\section{Previous Work}
 
-\subsection{Treasure}
-\emph{Treasure} was a location based game created by \cite{Barkhuus2005}. This was another GPS game which involved
+Over the years there has been several games that utilise GPS coordinates as a fundamental part of the game. In this section I go over two case
+studies of location games that utilised seamful design.
+
+One of the first location games was \emph{Can you see me now? (CYSMN)} which was a mixed reality made by blast theory. \citep{canyouseeme} The
+game was played over a two day. There were three runners that would run around the streets of Sheffield
+and Rotterdam. The goal of the runners were to catch players who were moving around in a virtual map. During the analysis of tactics displayed in the game,
+\cite{canyouseeme} mentioned that the runners would have large ranges in GPS error which meant that some of the online players would get
+caught without being able to see anything. Eventually the runners were able to take advantage of low GPS areas and were able to hide in shadow
+areas.
+
+\emph{Treasure} was a location based game created by \cite{Barkhuus2005} from the University of Glasgow. This was another GPS game which involved
 collecting coins in a specific in a more open game area to ensure high GPS accuracy. The objective of the
 game was to collect as many coins as possible, while also being able to "pickpocket" other players to steal their
 coins. The pickpocketing worked by having a button that they pressed as they got close to another person. \cite{Barkhuus2005}
@@ -251,10 +260,13 @@ found that one of the big tactics that people would have is that they would take
 in order to pickpocket people from further away or to be able to get away from their victim quickly so they couldn't be
 pickpocketed themselves.
 
-\emph{Treasure} shows that lag and latency might not always be considered a bad thing if it is implemented correctly. As a
-gameplay it could allow for more interesting and close escapes and it can cause other players to come up with new and creative
-strategies.
-
+Both \emph{Can you see me now?} and \emph{Treasure} found seams in their game design. In the case of CYSMN it was the accuracy
+of the GPS coordinates, and in \emph{Treasure} it was the lag in GPS coordinates. While initially in both games they were seen
+to be a flaw but as they got used to the mechanics, they were able to take advantage of them. For example there were several participants in 
+CYSMN that stated that it was a "shame" that they were caught by a runner without seeing them. However when the runners embraced the inaccuracies,
+it had increased the stakes of the game. \citep{canyouseeme}. We also saw that in \emph{Treasure} where the players took 
+advantage in the lag between location updates to get away from their victims. When you expose seams to people, there can
+be interesting ways that people exploit those seams to gain an advantage.
 
 \section{Guidance}
 \begin{itemize}    
