Added the ethics checklist to the dissertation

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -6,6 +6,7 @@
 %
 % put any additional packages here
 %
+\usepackage{pdfpages}
 
 \begin{document}
 
@@ -1104,6 +1105,10 @@ further look into what conditions a player would need to win and also how they w
     \label{fig:s21noiseandcatch}
 \end{figure}
 
+\chapter{Ethics Checklist}
+
+\includepdf[pages=-]{GPS_Shadows_Ethics_Checklist.pdf}
+
 
 \end{appendices}
 
@@ -1118,3 +1123,4 @@ further look into what conditions a player would need to win and also how they w
 \bibliography{l4proj}
 
 \end{document}
+
